@@ -1,3 +1,11 @@
+2013-11-23  David Edelsohn  <dje.gcc@gmail.com>
+
+	* config/rs6000/rs6000.c (IN_NAMED_SECTION): New macro.
+	(rs6000_xcoff_select_section): Place decls with stricter alignment
+	into named sections.
+	(rs6000_xcoff_unique_section): Allow unique sections for
+	uninitialized data with strict alignment.
+
 2013-11-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/59154
